--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,8 @@ Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.1
+Depends: 
+    methods
+Suggests: 
+    testthat
